namespace TextAnalyzer; 

public class MainManager {
    
}